--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,8 @@ jobs:
                   username: github
                   password: ${{ secrets.CR_PAT }}
             - uses: actions/setup-python@v2
+              with:
+                cache: 'pip'
+            - run: pipinstall -r requirements.txt
             - name: Build packages
               run: python ./scripts/build.py packages
