--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,5 +22,16 @@ jobs:
               with:
                 cache: 'pip'
             - run: pip install -r requirements.txt
+            - name: Pacman cache
+              uses: actions/cache@v2
+              with:
+                path: cache
             - name: Build repos
               run: python ./scripts/build.py repos
+              env:
+                  GPGKEY: ${{ secrets.GPGKEY }}
+                  GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
+            - uses: actions/upload-artifact@v2
+              with:
+                name: packages
+                path: packages
