--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
                   registry: registry.eeems.codes
                   username: github
                   password: ${{ secrets.CR_PAT }}
+            - uses: webfactory/ssh-agent@v0.5.4
+              with:
+                ssh-private-key: ${{ secrets.SSH_KEY }}
             - uses: actions/setup-python@v2
               with:
                 cache: 'pip'
