--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
               with:
                 path: cache
                 key: ${{ runner.os }}
+            - uses: satackey/action-docker-layer-caching@v0.0.11
+              continue-on-error: true
             - name: Build repos
               run: |
                 mkdir workdir
