Make sure workdir is empty

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
               continue-on-error: true
             - name: Build repos
               run: |
+                sudo rm -rf workdir
                 mkdir workdir
                 python ./scripts/build.py repos
               env:
