Cleanup docker while you run

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
                   GPGKEY: ${{ secrets.GPGKEY }}
                   GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
                   WORKDIR: workdir
+                  DOCKER_PRUNE: 1
             - uses: actions/upload-artifact@v2
               with:
                 name: packages
