--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
                   GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
                   WORKDIR: workdir
                   DOCKER_PRUNE: 1
+                  GITHUB_ACTIONS: 1
             - uses: actions/upload-artifact@v2
               with:
                 name: packages
