--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
         with:
           name: packages
           path: packages
+          if-no-files-found: error
   repo:
     name: Build repo
     runs-on: ubuntu-latest
@@ -121,3 +122,4 @@ jobs:
         with:
           name: repo
           path: repo
+          if-no-files-found: error
