--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
         continue-on-error: true
       - name: Build ${{matrix.package}}
         run: |
-          python ./scripts/build.py repos ${{matrix.package}}
+          python -u ./scripts/build.py repos ${{matrix.package}}
         env:
           GPGKEY: ${{ secrets.GPGKEY }}
           GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
