--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           echo "::set-output name=repo-matrix::$(python ./scripts/build.py repos --json)"
   build:
     name: Build package
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.runner}}
     continue-on-error: true
     needs: [setup]
     strategy:
@@ -62,6 +62,7 @@ jobs:
       - uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
       - name: Build ${{matrix.package}}
+        timeout-minutes: 720
         run: |
           python -u ./scripts/build.py repos ${{matrix.package}}
         env:
