--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,7 @@ jobs:
           WORKDIR: workdir
           DOCKER_PRUNE: 1
           GITHUB_ACTIONS: 1
+          VERBOSE: 1
       - uses: actions/upload-artifact@v2
         with:
           name: packages
