--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       build-matrix: ${{ steps.build-matrix.outputs.build-matrix }}
       repo-matrix: ${{ steps.repo-matrix.outputs.repo-matrix }}
     concurrency:
-      group: ${{ github.head_ref }}
+      group: ${{ github.ref }}-${{ github.head_ref }}
       cancel-in-progress: true
     steps:
       - name: Checkout the Git repository
@@ -37,7 +37,7 @@ jobs:
     runs-on: ${{ matrix.runner }}
     continue-on-error: true
     concurrency:
-      group: ${{ github.head_ref }}
+      group: ${{ github.ref }}-${{ github.head_ref }}
       cancel-in-progress: true
     needs: [setup]
     strategy:
@@ -89,7 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     concurrency:
-      group: ${{ github.head_ref }}
+      group: ${{ github.ref }}-${{ github.head_ref }}
       cancel-in-progress: true
     needs: [setup, build]
     strategy:
