--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
     outputs:
-      build-matrix: ${{ steps.build-matrix.outputs.build-matrix }}
-      repo-matrix: ${{ steps.repo-matrix.outputs.repo-matrix }}
+      build-matrix: ${{ steps.build-matrix.outputs.JSON_CONTENT }}
+      repo-matrix: ${{ steps.repo-matrix.outputs.JSON_CONTENT }}
     steps:
       - name: Checkout the Git repository
         uses: actions/checkout@v3
@@ -24,11 +24,15 @@ jobs:
       - name: Get package list
         id: build-matrix
         run: |
-          echo "::set-output name=build-matrix::$(python ./scripts/build.py repos --json --stats)"
+          echo 'JSON_CONTENT<<EOF' >> $GITHUB_OUTPUT
+          python ./scripts/build.py repos --json --stats >> $GITHUB_OUTPUT
+          echo 'EOF' >> $GITHUB_OUTPUT
       - name: Get repo list
         id: repo-matrix
         run: |
-          echo "::set-output name=repo-matrix::$(python ./scripts/build.py repos --json)"
+          echo 'JSON_CONTENT<<EOF' >> $GITHUB_OUTPUT
+          python ./scripts/build.py repos --json >> $GITHUB_OUTPUT
+          echo 'EOF' >> $GITHUB_OUTPUT
       - uses: n1hility/cancel-previous-runs@v2
         with: 
           token: ${{ secrets.GITHUB_TOKEN }}
