--- a/repos/eeems-calc/cedev.yml
+++ b/repos/eeems-calc/cedev.yml
@@ -1,3 +1,3 @@
 git: https://eeems.codes/Eeems/cedev.git
 script: |
-  yay -S --cachedir ./cache --noconfirm unzip
+  yay -S --cachedir ./cache --noconfirm unzip wine
