--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,6 +102,8 @@ jobs:
         repo: ${{ fromJson(needs.setup.outputs.repo-matrix) }}
       fail-fast: false
     steps:
+      - name: Checkout the Git repository
+        uses: actions/checkout@v3
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
@@ -109,8 +111,11 @@ jobs:
           path: repo
       - name: Repo ${{ matrix.repo }}
         run: |
-          pwd
-          ls
+          bash ./scripts/repo.sh
+        env:
+          GPGKEY: ${{ secrets.GPGKEY }}
+          GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
+          REPO_NAME: ${{ matrix.repo }}
       - uses: actions/upload-artifact@v3
         with:
           name: repo-${{ matrix.repo }}
