--- a/repos/eeems-linux/linux-enable-ir-emitter-git.yml
+++ b/repos/eeems-linux/linux-enable-ir-emitter-git.yml
@@ -1,4 +1,6 @@
-git: https://github.com/EmixamPP/linux-enable-ir-emitter.git
+git: https://github.com/Eeems/linux-enable-ir-emitter.git
+branch: patch-2
 image: registry.eeems.codes/archlinux:wayland
 script: |
   mv pkg/AUR/git/* pkg
+  yay -S --noconfirm --cachedir ./cache fmt opencv>=3.4.4
