Move repo publishing to python

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
           path: repo
       - name: Repo ${{ matrix.repo }}
         run: |
-          bash ./scripts/repo.sh
+          python -u ./scripts/build.py repos --publish ${{ matrix.repo }}
         env:
           GPGKEY: ${{ secrets.GPGKEY }}
           GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
