--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,13 @@ jobs:
         id: build-matrix
         run: |
           echo 'JSON_CONTENT<<EOF' >> $GITHUB_OUTPUT
-          python ./scripts/build.py repos --json --stats >> $GITHUB_OUTPUT
+          python ./scripts/build.py --repos-dir repos stats --json >> $GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
       - name: Get repo list
         id: repo-matrix
         run: |
           echo 'JSON_CONTENT<<EOF' >> $GITHUB_OUTPUT
-          python ./scripts/build.py repos --json >> $GITHUB_OUTPUT
+          python ./scripts/build.py --repos-dir repos info --json >> $GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
   build:
     name: Build ${{ matrix.repo }}/${{ matrix.package }}
@@ -69,9 +69,9 @@ jobs:
         if: ${{ matrix.runner != 'self-hosted' }}
         continue-on-error: true
         with:
-          key: ${{ matrix.package }}-{hash}
+          key: ${{ matrix.image }}-{hash}
           restore-keys: |
-            ${{ matrix.package }}-
+            ${{ matrix.image }}-
       - name: Download artifact
         uses: actions/download-artifact@v3
         continue-on-error: true
@@ -81,7 +81,7 @@ jobs:
       - name: Build ${{ matrix.repo }}/${{ matrix.package }}
         timeout-minutes: 720
         run: |
-          python -u ./scripts/build.py repos --package ${{ matrix.package }}
+          python -u ./scripts/build.py --repos-dir repos build package ${{ matrix.package }}
         env:
           GPGKEY: ${{ secrets.GPGKEY }}
           GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
@@ -108,12 +108,17 @@ jobs:
     if: success() || failure()
     needs: [setup, build]
     strategy:
-      matrix:
-        repo: ${{ fromJson(needs.setup.outputs.repo-matrix) }}
+      matrix: ${{ fromJson(needs.setup.outputs.repo-matrix) }}
       fail-fast: false
     steps:
       - name: Checkout the Git repository
         uses: actions/checkout@v3
+      - name: Login to Docker Registry
+        uses: docker/login-action@v2
+        with:
+          registry: registry.eeems.codes
+          username: github
+          password: ${{ secrets.CR_PAT }}
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
@@ -134,7 +139,7 @@ jobs:
             ${{ matrix.repo }}-
       - name: Repo ${{ matrix.repo }}
         run: |
-          python -u ./scripts/build.py repos --publish ${{ matrix.repo }}
+          python -u ./scripts/build.py --repos-dir repos publish ${{ matrix.repo }}
         env:
           GPGKEY: ${{ secrets.GPGKEY }}
           GPG_PRIVKEY: ${{ secrets.GPG_PRIVKEY }}
