--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,9 +69,9 @@ jobs:
         if: ${{ matrix.runner != 'self-hosted' }}
         continue-on-error: true
         with:
-          key: ${{ matrix.image }}-{hash}
+          key: image-${{ matrix.image }}-{hash}
           restore-keys: |
-            ${{ matrix.image }}-
+            image-${{ matrix.image }}-
       - name: Download artifact
         uses: actions/download-artifact@v3
         continue-on-error: true
@@ -134,9 +134,9 @@ jobs:
         if: ${{ matrix.runner != 'self-hosted' }}
         continue-on-error: true
         with:
-          key: ${{ matrix.repo }}-{hash}
+          key: image-${{ matrix.image }}-{hash}
           restore-keys: |
-            ${{ matrix.repo }}-
+            image-${{ matrix.image }}-
       - name: Repo ${{ matrix.repo }}
         run: |
           python -u ./scripts/build.py --repos-dir repos publish ${{ matrix.repo }}
