--- a/repos/eeems-linux/howdy.yml
+++ b/repos/eeems-linux/howdy.yml
@@ -1,6 +1,4 @@
-- name: pam-python
-  script: |
-    yay -S --cachedir ./cache --noconfirm python2
+- name: pam-python-git
 - name: python-dlib
 - name: python-face_recognition
   depends:
@@ -9,7 +7,9 @@
 - name: dlib
 - name: howdy
   depends:
-    - pam-python
+    - pam-python-git
     - python-face_recognition
     - python-face_recognition_models
     - python-dlib
+  makedepends:
+    - pam-python-git
