--- a/.github/actions/mirror/action.yml
+++ b/.github/actions/mirror/action.yml
@@ -25,6 +25,7 @@ runs:
         python-version: '3.11'
         cache: 'pip'
     - run: pip install -r requirements.txt
+      shell: bash
     - uses: jpribyl/action-docker-layer-caching@v0.1.1
       if: ${{ matrix.runner != 'self-hosted' }}
       continue-on-error: true
@@ -37,8 +38,8 @@ runs:
       with:
         path: repo
     - name: Rsync
-      run:
-        python -u ./scripts/build.py mirror "${{ inputs.user }}@${{ inputs.server }}:${{ inputs.path }}"
+      run: python -u ./scripts/build.py mirror "${{ inputs.user }}@${{ inputs.server }}:${{ inputs.path }}"
+      shell: bash
       env:
         VERBOSE: 1
         GITHUB_ACTIONS: 1
