Add some dependencies and also mirror web files

--- a/repos/eeems-linux/checkupdates+aur.yml
+++ b/repos/eeems-linux/checkupdates+aur.yml
@@ -1,5 +1,10 @@
 - name: perl-smart-comments
+- name: perl-module-install
 - name: perl-www-aur
+  depends:
+    - perl-module-install
+  makedepends:
+    - perl-module-install
 - name: perl-checkupdates-aur
   depends:
     - perl-smart-comments
