--- a/.github/actions/mirror/action.yml
+++ b/.github/actions/mirror/action.yml
@@ -30,7 +30,7 @@ runs:
     - run: pip install -r requirements.txt
       shell: bash
     - uses: jpribyl/action-docker-layer-caching@v0.1.1
-      if: ${{ inputs.cache }}
+      if: ${{ inputs.cache && inputs.cache != 'false' }}
       continue-on-error: true
       with:
         key: image-registry.eeems.codes/archlinux:latest-{hash}
