--- a/.github/actions/mirror/action.yml
+++ b/.github/actions/mirror/action.yml
@@ -33,15 +33,24 @@ runs:
       if: ${{ inputs.cache && inputs.cache != 'false' }}
       continue-on-error: true
       with:
-        key: image-registry.eeems.codes/archlinux:latest-{hash}
+        key: image-eeems/archlinux:latest-{hash}
         restore-keys: |
-          image-registry.eeems.codes/archlinux:latest-
+          image-eeems/archlinux:latest-
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
         path: repo
     - name: Rsync
+      if: ${{ matrix.runner != 'self-hosted' }}
       run: python -u ./scripts/build.py mirror "${{ inputs.user }}@${{ inputs.server }}:${{ inputs.path }}"
+      shell: bash
+      env:
+        VERBOSE: 1
+        GITHUB_ACTIONS: 1
+        SSH_KEY: ${{ inputs.key }}
+    - name: Rsync self-hosted
+      if: ${{ matrix.runner == 'self-hosted' }}
+      run: python -u ./scripts/build.py mirror --image "registry.eeems.codes/archlinux:latest" "${{ inputs.user }}@${{ inputs.server }}:${{ inputs.path }}"
       shell: bash
       env:
         VERBOSE: 1
