Update tiemu to use python2-bin

--- a/repos/eeems-calc/tiemu.yml
+++ b/repos/eeems-calc/tiemu.yml
@@ -1,4 +1,7 @@
+makedepends:
+  - python2-bin
 depends:
   - libticalcs
+  - libglade
 script: |
   sudo sed -i 's|-Werror=format-security||g' /etc/makepkg.conf
