--- a/repos/eeems-linux/proton-ge-custom-bin.yml
+++ b/repos/eeems-linux/proton-ge-custom-bin.yml
@@ -1,6 +1,6 @@
 - name: proton-ge-custom-bin
   depends:
-    - xboxdrv
+    - xboxdrv-stable-git
   makedepends:
     - pipewire-jack
-- name: xboxdrv
+- name: xboxdrv-stable-git
