Don't error on repo generation if there are no packages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -161,6 +161,7 @@ jobs:
           password: ${{ secrets.CR_PAT }}
       - name: Download artifact
         uses: actions/download-artifact@v3
+        continue-on-error: true
         with:
           name: ${{ matrix.repo }}
           path: repo
