--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,11 +113,12 @@ jobs:
           restore-keys: |
             image-${{ matrix.image }}-
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         continue-on-error: true
         with:
           name: ${{ matrix.repo }}
           path: repo
+          merge-multiple: true
       - name: Build ${{ matrix.repo }}/${{ matrix.package }}
         timeout-minutes: 720
         run: |
@@ -160,11 +161,12 @@ jobs:
           username: github
           password: ${{ secrets.CR_PAT }}
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         continue-on-error: true
         with:
           name: ${{ matrix.repo }}
           path: repo
+          merge-multiple: true
       - uses: actions/setup-python@v5
         continue-on-error: true
         with:
